crates/elenchus-parser/tests/snapshots/errors__max_per_class_caps_places_within_a_class.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "diags(REPEATED).render(None, Some(2))"
---
RESULT: 4 syntax errors

FACT  (3 problems)
  syntax  : FACT [<domain>.]<Subject> <predicate> [<object>]
  example : FACT socrates is human
    line 1, col 11 - unexpected text after the FACT atom
      | FACT a b c d
      |           ^^
    line 2, col 11 - unexpected text after the FACT atom
      | FACT a b c e
      |           ^^
    ... and 1 more FACT problem

NOT  (1 problem)
  syntax  : NOT <Subject> <predicate> [<object>]
  example : NOT socrates is immortal
    line 4, col 10 - unexpected text after the NOT atom
      | NOT a b c d
      |          ^^
